--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="./js/commons/typed-2.0.12.min.js"></script>
-    <script src="./js/commons/vue-2.7.13.min.js"></script>
+<!--    <script src="./js/commons/vue-2.7.13.min.js"></script>-->
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.7.13/vue.js"></script>
     <script src="./js/commons/anime-3.2.2.min.js"></script>
     <link rel="stylesheet" href="./css/index.css" type="text/css" />
     <link rel="stylesheet" href="./css/graphical-1.css" type="text/css" />
@@ -33,7 +34,6 @@
                             程序员小杨
                         </div>
                         <div class="sub-title"><span></span></div>
-                        <day-night-switch style="min-height: 50px; min-width: 200px;"></day-night-switch>
                     </div>
                     <div class="order-info-view">
                         <div class="order-info-column">
@@ -69,283 +69,13 @@
             </div>
         </div>
         <div class="right-view">
-            <!-- <div>
-                技术服务生活
-            </div> -->
             <div class="y-line"></div>
             <title-graphical></title-graphical>
-            <content-graphical title="主要技术" style="height: 260px;">
-                <template slot="content">
-                    <div>1. 熟悉 Java 基础、常用 API、反射、多线程、Servlet、JSP、JNA、常用数据结构、算法、设计模式。</div>
-                    <div>2. 熟悉 Spring、SpringSecurity、SpringMVC、SpringBoot、SpringCloud、SpringCloudAlibaba。</div>
-                    <div>3. 熟悉 MyBatis、Shiro、Thymeleaf、Freemarker、EasyExcel、Quartz、Swagger 等框架类库。</div>
-                    <div>4. 熟悉 MySQL、Redis、RabbitMQ、RocketMQ、Sqlite。</div>
-                    <div>5. 熟悉 HTML5、CSS、SCSS、JS、JQuery、Ajax、Vue、VueX、VueRouter、Axios、uniapp、微信小程序。</div>
-                    <div>6. 熟悉 Layui、ElementUI、WeUI、Echarts图表等以及各种UI库。</div>
-                    <div>7. 熟悉 Linux、Nginx、NodeJS、Docker、Git、SVN、Maven。</div>
-                </template>
-            </content-graphical>
-            <content-graphical title="工作经历" style="height: 150px;">
-                <template slot="content">
-                    <table>
-                        <tr>
-                            <td>时间</td>
-                            <td>公司</td>
-                            <td>职位</td>
-                        </tr>
-                        <tr>
-                            <td>2022 年 3 月至 2024 年 3 月</td>
-                            <td>广州云潮供应链有限公司</td>
-                            <td>Java 后端工程师</td>
-                        </tr>
-                        <tr>
-                            <td>2021 年 8 月至 2022 年 3 月</td>
-                            <td>广州平云小匠有限公司</td>
-                            <td>Java 后端工程师</td>
-                        </tr>
-                    </table>
-                </template>
-            </content-graphical>
-            <content-graphical title="项目经验" style="height: 1420px;">
-                <template slot="content">
-                    <table style="margin-top: 15px;">
-                        <tr>
-                            <td><b>项目名称：</b></td>
-                            <td><b>云潮供应链无纸化系统</b></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>项目描述：</b></td>
-                            <td>该项目是用于冷链仓储物流管理，项目实现无纸化数据留存，方便快捷的对订单进行管理。</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>技 术 栈 ：</b></td>
-                            <td>后 端：SpringBoot、SpringCloud Alibaba、MyBatisPlus、Quartz、EasyExcel、POI、</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Shiro、Swagger</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>前 端：Vue、Vue-Router、Axios、ElementUI、ECharts、SCSS</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>数据库：MySQL、SqlServer、</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>中间件：Redis、RabbitMQ</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>服务器：Nginx、Docker、CentOS</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>工作内容：</b></td>
-                            <td>1. 编写拣货任务、出入库订单、订单预约、导入导出、报表等功能</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>2. 编写物流订单功能，使用腾讯地图 Api 更新位置</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>3. 使用 Quartz 编写盘点任务，定时进行盘点</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>4. 使用 RabbitMQ 在订单结束后自动生成费用记录</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>5. 使用 ElementUI、Vue-Router、Axios、QrCode 等编写系统页面，封装组件</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>6. 使用 Echarts 编写报表页面、首页报表、物流轨迹图页面</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>7. 使用中间件提升系统响应速度、优化 SQL 查询速度</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>8. 使用 SpotBugs 等工具检查代码规范与漏洞，清除冗余代码，优化遗留的各种 BUG</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>9. 使用 Arthas、jstack、jmap、MAT、XShell、RDM、Navicat 等工具开发和运维，24</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>小时维护系统正常运行</td>
-                        </tr>
-                    </table>
-
-                    <table style="margin-top: 15px;">
-                        <tr>
-                            <td><b>项目名称：</b></td>
-                            <td><b>云潮供应链物流小程序</b></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>项目描述：</b></td>
-                            <td>该项目给司机更新订单状态，客户查看订单。</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>技 术 栈 ：</b></td>
-                            <td>Uniapp、WeUI、IViewUI、TencentMapApi</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>1. 独立开发维护小程序前后端，优化前后端代码，提升用户体验，解决线上 BUG</td>
-                        </tr>
-                        <tr>
-                            <td><b>工作内容：</b></td>
-                            <td>2. 编写物流详情、订单列表、签到、导入导出等功能的页面与接口，以及封装组件</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>3. 后端使用Redis 计算签到位置，RabbitMQ 推送订单数据</td>
-                        </tr>
-                    </table>
-
-                    <table style="margin-top: 15px;">
-                        <tr>
-                            <td><b>项目名称：</b></td>
-                            <td><b>云潮供应链PDA作业APP</b></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>项目描述：</b></td>
-                            <td>该项目用于仓库工人扫码作业使用。</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>技 术 栈 ：</b></td>
-                            <td>Uniapp、QrCode</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>1. 编写入库扫描、出库扫描、拣货、盘点等功能</td>
-                        </tr>
-                        <tr>
-                            <td><b>工作内容：</b></td>
-                            <td>2. 使用蓝牙连接打印机打印标签</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>3. 优化和维护项目，提升用户体验，优化流程以加快工人作业速度</td>
-                        </tr>
-                    </table>
-
-                    <table style="margin-top: 15px;">
-                        <tr>
-                            <td><b>项目名称：</b></td>
-                            <td><b>平云小匠客户关系管理系统</b></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>项目描述：</b></td>
-                            <td>该项目用于合同、维修工单、物流仓储、备件管理、技术培训等业务，包含</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>《平云小匠快修》小程序、《平云小匠工程师》等 app。</td>
-                        </tr><tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td><b>技 术 栈 ：</b></td>
-                            <td>后 端：SpringCloud、MyBatisPlus、Freemarker、Quartz、EasyExcel、POI、Shiro、</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>前 端：HTML、CSS、JavaScript、JQuery、Ajax、LayUI、EasyUI</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>数据库：MySQL</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>中间件：Redis、RabbitMQ</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>服务器：Jenkins、Nginx、Centos</td>
-                        </tr>
-                        <tr>
-                            <td><b>工作内容：</b></td>
-                            <td>1. 编写维修工单、物流仓储、合同工单、培训考试、小程序、APP 等模块开发</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>2. 编写报销单审核、工单创建与处理、用户信息、考试信息的导入导出、短信验证、定时任务等功能</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>3. 根据需求编写、迭代以及优化 PC 端页面，与前端测试进行代码联调</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>4. 参与需求评审，重构项目，SQL优化，优化系统响应速度，提升用户体验</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>5. 使用 XShell、RDM、Navicat 等工具运维，24 小时维护系统正常运行</td>
-                        </tr>
-                    </table>
-                </template>
-            </content-graphical>
-            <content-graphical title="个人项目">
-                <template slot="content">
-                    hello
-                </template>
-            </content-graphical>
-            <content-graphical title="自我评价">
-                <template slot="content">
-                    hello
-                </template>
-            </content-graphical>
+            <content-graphical title="主要技术" :content="skill"></content-graphical>
+            <content-graphical title="工作经历" :content="workExperience"></content-graphical>
+            <content-graphical title="项目经验" :content="projectExperience"></content-graphical>
+            <content-graphical title="个人项目"></content-graphical>
+            <content-graphical title="自我评价"></content-graphical>
         </div>
     </div>
 </body>
