--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script type="text/javascript" src="./js/commons/typed-2.0.12.min.js"></script>
-<!--    <script src="./js/commons/vue-2.7.13.min.js"></script>-->
-    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.7.13/vue.js"></script>
+    <script src="./js/commons/vue-2.7.13.min.js"></script>
+<!--    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.7.13/vue.js"></script>-->
     <script src="./js/commons/anime-3.2.2.min.js"></script>
     <link rel="stylesheet" href="./css/index.css" type="text/css" />
     <link rel="stylesheet" href="./css/graphical-1.css" type="text/css" />
